--- a/demobbc/pom.xml
+++ b/demobbc/pom.xml
@@ -14,6 +14,11 @@
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jboss.ddoyle.jbpm.workitems</groupId>
+      <artifactId>demo-workitems</artifactId>
+      <version>1.0.0</version>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
