--- a/demobbc/pom.xml
+++ b/demobbc/pom.xml
@@ -1,40 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>signavio</groupId>
-  <artifactId>demobbc</artifactId>
-  <version>1.0</version>
-  <packaging>kjar</packaging>
-  <name>demobbc</name>
-  <dependencies>
-    <dependency>
-      <groupId>com.signavio</groupId>
-      <artifactId>dmn-formulae-v3-java8</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.ddoyle.jbpm.workitems</groupId>
-      <artifactId>demo-workitems</artifactId>
-      <version>1.0.0</version>
-    </dependency>
-  </dependencies>
-  <repositories>
-    <repository>
-      <id>guvnor-m2-repo</id>
-      <name>Guvnor M2 Repo</name>
-      <url>http://localhost:8080/jbpm-console/maven2/</url>
-    </repository>
-  </repositories>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.kie</groupId>
-        <artifactId>kie-maven-plugin</artifactId>
-        <version>6.5.0.CR1</version>
-        <extensions>true</extensions>
-      </plugin>
-    </plugins>
-  </build>
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>signavio</groupId>
+	<artifactId>demobbc</artifactId>
+	<version>1.0</version>
+	<packaging>kjar</packaging>
+	<name>demobbc</name>
+	<properties>
+		<version.org.kie>6.5.0-SNAPSHOT</version.org.kie>
+		<!-- 
+		<version.org.kie>6.5.0.CR2-redhat-1</version.org.kie>
+		 -->
+		<version.ch.qos.logback>1.1.7</version.ch.qos.logback>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.kie</groupId>
+			<artifactId>kie-api</artifactId>
+			<version>${version.org.kie}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.signavio</groupId>
+			<artifactId>dmn-formulae-v3-java8</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.ddoyle.jbpm.workitems</groupId>
+			<artifactId>demo-workitems</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jbpm</groupId>
+			<artifactId>jbpm-test</artifactId>
+			<version>6.5.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${version.ch.qos.logback}</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
+	<repositories>
+		<repository>
+			<id>guvnor-m2-repo</id>
+			<name>Guvnor M2 Repo</name>
+			<url>http://localhost:8080/jbpm-console/maven2/</url>
+		</repository>
+	</repositories>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.kie</groupId>
+				<artifactId>kie-maven-plugin</artifactId>
+				<version>6.5.0.CR1</version>
+				<extensions>true</extensions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
 </project>
